Fix broken link, adjust padding on small screens

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
 .header,
 .footer,
 .main {
-  padding: 1rem 3rem;
+  padding: 1rem;
   color: white;
 }
 
@@ -221,6 +221,11 @@ body {
 }
 
 @media screen and (min-width: 640px) {
+  .header,
+  .footer,
+  .main {
+    padding: 1rem 3rem;
+  }
   .main__content {
     grid-template-columns: 1fr 1fr;
   }
